--- a/users/static/users/css/register.css
+++ b/users/static/users/css/register.css
@@ -9,7 +9,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 50, 0.8), rgba(0, 0, 50, 0.8)), url('../images/pexels-pixabay-531880.jpg'); /* Specify the URL of the image */
+    background: linear-gradient(rgba(42, 43, 43, 0.5), rgba(104, 101, 103, 0.5)), url('../images/pexels-pixabay-531880.jpg'); /* Specify the URL of the image */
     
     background-position: center;
     background-size: cover;
@@ -24,19 +24,19 @@
     transform: translate(-50%,10%);
     text-align: center;
     background-color: white;
-    border: 3px solid rgba(0, 0, 50, 0.8);
+    border: 3px solid rgba(63, 19, 57, 0.8);
     border-radius: 2em;
     padding: 3rem 2rem 2rem 2rem;
 }
 
 .form-box h1{
-    color: #3c00a0;
+    color: #B7578A;
     font-size: 30 px;
     margin-bottom: 50px;
     position: relative;
 }
 .form-box h2{
-    color: #3c00a0;
+    color: #B7578A;
     font-size: 10 px;
     margin: 10px 0px 10px 0px;
 }
@@ -47,7 +47,7 @@
     height: 4px;
     border-radius: 3px;
     position: absolute;
-    background: #3c00a0;
+    background: #B7578A;
     bottom: -12px;
     left: 50%;
     transform: translateX(-50%);
@@ -80,7 +80,7 @@ button{
     margin-top: 5px;
     padding: 10px 20px 10px 20px ;
     border-radius: 2rem;
-    color: #3c00a0;
+    color: #B7578A;
     font-size: 15px;
     font-weight: 800;
     cursor: pointer;
